--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "typescript": "^5.0.0",
+    "cheerio": "1.0.0-rc.12",
     "umi-test": "^1.9.7"
   },
   "peerDependencies": {
